--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ seaborn
 scikit-learn
 statsmodels
 plotly
-prophet
 holidays==0.24
 streamlit
+prophet==1.1.4
+cmdstanpy==1.0.8
+stanio==0.3.0
+pystan==3.7.0
+
