--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -4,15 +4,18 @@ channels:
 dependencies:
   - python=3.9
   - pandas
-  - numpy
+  - numpy<2.0
   - matplotlib
   - seaborn
   - scikit-learn
   - statsmodels
   - plotly
-  - pystan=2.19.1.1
-  - prophet=1.1.1
-  - ipykernel
-  - jupyterlab
   - holidays=0.24
   - streamlit
+  - ipykernel
+  - jupyterlab
+  - pip
+  - pip:
+      - prophet==1.1.4
+      - cmdstanpy==1.0.8
+      - stanio==0.3.0
