--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ statsmodels
 plotly
 holidays==0.24
 streamlit
+
+# Stack do Prophet – versões compatíveis entre si
 prophet==1.1.4
 cmdstanpy==1.0.8
 stanio==0.3.0
